Premier commit avec mes fichiers

--- a/indx.html
+++ b/indx.html
@@ -4,29 +4,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <title>page Web de portfolio</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <nav>
             <ul>
               <li><a href="#">Accueil</a></li>
-              <li><a href="#">À propos</a></li>
+              <li><a href="a propos.html">À propos</a></li>
               <li><a href="#">travail</a></li>
               <li><a href="#">cv</a></li>
               <li><a href="#">contact</a></li>
             </ul>
           </nav>
-          <div>
+          <div class="div1">
             <h1> JE SUIS ABDOUL WAHAB DJEILANI</h1>
             <audio controls>
-            <source src="audio.mp3" type="audio/mp3">
-        </audio>
-            <img src="poho.png">
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-            <button>
+                   <source src="audio.mp3" type="audio/mp3">
+            </audio>
+                   <img src="poho.png">
+                   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            <button type="submit">
              mon portfolio
             </button>
         </div>
-            <p>je suis un developpeur de site web front-end
+           <div class="div2">
+        <p>je suis un developpeur de site web front-end
             je cree les page a base du:
             <ul>
                 <li>html</li>
@@ -34,16 +36,15 @@
                 <li>javascript</li>
             </ul>
          </p>
-        </div>
-         
-         <div>
+        </div>         
+         <div class="div3">
          <footer> 
             <pre>               service:
             <br>je cree des site web visible par le client
             </pre>
           </footer>
          </div>
-         <label for="site-search">Search :</label>
+         <label for="search">Search :</label>
          <input type="search" id="search" name="abd" />
          
          <button>Search</button>
